# spectro-vr

./: Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: ci.yaml
sp-analysis/: Cargo.toml
sp-app/: Cargo.toml  README.md
sp-app/src/: egui.rs  lib.rs  main.rs
sp-app/src/workers/: analysis.rs  audio.rs  mod.rs
