[workspace]
members = ["sp-app", "sp-analysis"]
resolver = "3"

# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
edition = "2024"
license = "MIT-0 OR Apache-2.0"
repository = "https://github.com/TheButlah/spectro-vr"
rust-version = "1.92.0"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
aus = "0.1.8"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
colorgrad = "0.8.0"
cpal = "0.17.1"
ctrlc = "3.5.1"
derive_more = "2.1.1"
eframe = "0.33.3"
egui = "0.33.3"
flume = "0.12.0"
openxr = "0.21.0"
owo-colors = "4.2.3"
ringbuf = "0.4.8"
thiserror = "2.0.17"
tokio-util = { version = "0.7.18", default-features = false, features = [] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# First-party crates
sp-analysis.path = "sp-analysis"

[workspace.dependencies.tokio]
default-features = false
features = [
	"sync",
	"io-util",
	"macros",
	"rt",
	"time",
	"signal",
]
version = "1.49.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

# Enable a small amount of optimization for our own crates.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
