[package]
name = "sp-app"
version = "0.0.0"
description = "SpectroVR - A Spectrogram as a VR Overlay"

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
color-eyre.workspace = true
cpal.workspace = true
flume.workspace = true
openxr.workspace = true
sp-analysis.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
